test/tasty/neg/src-2/TestDelayedPrivate.check
TestDelayedPrivate_fail.scala:7: error: value Deeper is not a member of object tastytest.DelayedPrivate.Nested
    DelayedPrivate.Nested.Deeper
                          ^
1 error
